--- a/src/NuGetGallery/Views/Users/TransformFailed.cshtml
+++ b/src/NuGetGallery/Views/Users/TransformFailed.cshtml
@@ -4,15 +4,15 @@
     Layout = "~/Views/Shared/Gallery/Layout.cshtml";
 }
 
-<section role="main" class="container main-container page-api-keys">
-    @if (TempData.ContainsKey("TransformError"))
-    {
-        <div class="row">
-            <h1>
-                Failed to transform to an organization
-            </h1>
+<section role="main" class="container main-container page-account-transform-failed">
+    <div class="row col-sm-8">
+        @if (TempData.ContainsKey("TransformError"))
+        {
+            <h1>Failed to transform to an organization</h1>
             <hr />
-            @TempData["TransformError"]
-        </div>
-    }
+            <div>
+                @TempData["TransformError"]
+            </div>
+        }
+    </div>
 </section>
