Move error from tempdata to viewModel

--- a/src/NuGetGallery/Views/Users/TransformFailed.cshtml
+++ b/src/NuGetGallery/Views/Users/TransformFailed.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model TransformAccountFailedViewModel
+@{
     ViewBag.Title = "Transform Account";
     ViewBag.MdPageColumns = Constants.ColumnsFormMd;
     Layout = "~/Views/Shared/Gallery/Layout.cshtml";
@@ -6,13 +7,8 @@
 
 <section role="main" class="container main-container page-account-transform-failed">
     <div class="row col-sm-8">
-        @if (TempData.ContainsKey("TransformError"))
-        {
-            <h1>Failed to transform to an organization</h1>
-            <hr />
-            <div>
-                @TempData["TransformError"]
-            </div>
-        }
+        <h1>Failed to transform to an organization</h1>
+        <hr />
+        <div>@Model.ErrorMessage</div>
     </div>
 </section>
